cabal-version:       2.4

name:                rate-limiter
version:             0.1.0.0
license:             Apache-2.0
license-file:        LICENSE
author:              Gabriel Volpe
maintainer:          volpegabriel@gmail.com
category:            Concurrency
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Concurrency.RateLimiter
                     , Time
  build-depends:       base ^>=4.12.0.0
                     , refined >= 0.4.2 && < 0.5
                     , template-haskell >= 2.14.0 && < 2.15
                     , transient >= 0.6.3 && < 0.7
  hs-source-dirs:      src
  default-language:    Haskell2010

executable rate-limiter
  main-is:             Main.hs
  build-depends:       base ^>=4.12.0.0
                     , rate-limiter
                     , refined >= 0.4.2 && < 0.5
                     , template-haskell >= 2.14.0 && < 2.15
                     , transient >= 0.6.3 && < 0.7
  hs-source-dirs:      app
  default-language:    Haskell2010
